force-app/main/default/objects/Holding__c/Holding__c.object-meta.xml
<CustomObject>
    <label>Holding</label>
    <nameField>
        <displayFormat>HR-{000000}</displayFormat>
        <label>Holdings Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holdings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>