force-app/main/default/objects/Holding__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>Listings__c</referenceTo>
    <relationshipLabel>Holdings</relationshipLabel>
    <relationshipName>Holdings</relationshipName>
    <type>Lookup</type>
</CustomField>